feat: add subscribe endpoint
